--- a/code/system_resources/userguide.html
+++ b/code/system_resources/userguide.html
@@ -5,25 +5,64 @@ body {  background-color: #2b3e50;
         color: #FFFFFF; /* Dark grey text color */
         font-family: 'Calibri', sans-serif; /* Set the font family to Calibri */
         font-size: 10pt; /* Set the font size to 10 points */
-        div: text-align: center;
         }
+        
+div {
+  text-align: center;
+}
+table {
+  border: thin dotted #8d8d8d;
+  padding: 4px;
+  width: 100%;
+  margin: 5px;
+}
+
+tr:hover {
+  background-color: rgb(170, 197, 161);
+  }
+
+th {
+  text-align: left;
+}
 </style>
 </head>
 <body>
-<p>Welcome to the MESA 4.0 tool. The tool is based on a method developed by UNEP-WCMC and the Norwegian Environment Agency.</p>
-<p>You are now in the <b>About...</b>-screen. Our aim with this page is to give you some basic information about how to use the system.</p>
-<p></p>
-<div><img src="system_resources/system_overview.png" alt="Italian Trulli" width=720 halign=center></div> 
-<p></p>
-<h3>Import data</h3>
-<p>To work with MESA you will have to provide input data. The data must be placed in the correct folders:
-<ul>
-  <li>Asset (input/asset)</li>
-  <li>Atlas (input/atlas)</li>
-  <li>Geocode (input/geocode)</li>
-  <li>Lines (input/lines)</li>
-</ul>
+<p>Welcome to the MESA 4.0 tool. The tool is based on a method developed by UNEP-WCMC and the Norwegian Environment Agency. 
+You are now in the quick guide for our tool. Our aim with this page is to give you some basic information about how to use the system.</p>
+<p>
+<div><img src="system_resources/system_overview.png" alt="System overview graphic" width=720 halign=center></div> 
 </p>
+<h3>Import data</h3>
+<p>To work with MESA you will have to provide input data. This is part of building up the database. Eventually your 
+  input data will be processed and you will be provided with a database for visualisation or further analysis.</p>
+<p>Valid data formats are shapefiles or a geopackage file with tables. The data must be placed in the correct folders:</p>
+<table>
+  <tr>
+    <th>Data</th>
+    <th>Folder</th>
+    <th>Comment</th>
+  </tr>
+  <tr>
+    <td>Asset</td>
+    <td>input/asset</td>
+    <td>Spatial format can be point, lines or polygons</td>
+  </tr>
+  <tr>
+    <td>Geocode</td>
+    <td>input/geocode</td>
+    <td>Calid format is polygons</td>
+  </tr>
+  <tr>
+    <td>Atlas</td>
+    <td>input/atlas</td>
+    <td>Valid format is polygons</td>
+  </tr>
+  <tr>
+    <td>Lines</td>
+    <td>input/lines</td>
+    <td>Lines are only valid data format</td>
+  </tr>
+</table>
 <h3>Set up processing</h3>
 <p>Processing data for a sensitivity atlas involves registering asset values and suceptibilitis. This is done by pressing the <b>Set up</b>-button.
 </p>
@@ -31,18 +70,18 @@ body {  background-color: #2b3e50;
 <p>This is where you initiate the processing. Processing time will tepend on how many 
 assets you have and the granularity of your geocode objects. It could take anything 
 a couple of minutes to an hour.</p>
+<p></p>
 <h3>Work with lines</h3>
 <p>If you would like to work with line segments you will need to store appropriate lines 
 in the lines-folder. You will have three options in this user interface.
 <ul>
   <li>Initiate - creates some random lines for you to work on</li>
-  <liEdit segments - here you can edit the width and length of the line segments per line. This means you can have individual lengts and withs.</li>
+  <li>Edit segments - here you can edit the width and length of the line segments per line. This means you can have individual lengts and withs.</li>
   <li>Process segments does the same for line segments as the processing does for the geocode objects. Map and analysis layers are created.</li>
   <li>Lines (input/lines)</li>
 </ul>
 The system can also generate some random lines for you. You can then 
 adjust these lines later.
 </p>
-<p>{id_uuid}</p>
 </body>
 </html>
