--- a/code/system_resources/userguide.html
+++ b/code/system_resources/userguide.html
@@ -82,6 +82,12 @@ in the lines-folder. You will have three options in this user interface.
 </ul>
 The system can also generate some random lines for you. You can then 
 adjust these lines later.
-</p>
+</p>h3>Making maps</h3>
+<p>We have prepared a QGIS project file. The file contains prepared 
+  styles and map templates making it dtraight forward to produce a 
+  sensitivity atlas.</p>
+  <p>Since all our data is stored in a database file other desktop or 
+    server tools may be used.
+  </p>
 </body>
 </html>
