--- a/code/system_resources/userguide.html
+++ b/code/system_resources/userguide.html
@@ -80,14 +80,14 @@ in the lines-folder. You will have three options in this user interface.
   <li>Process segments does the same for line segments as the processing does for the geocode objects. Map and analysis layers are created.</li>
   <li>Lines (input/lines)</li>
 </ul>
-The system can also generate some random lines for you. You can then 
-adjust these lines later.
-</p>h3>Making maps</h3>
+<p>The system can also generate some random lines for you. You can then 
+adjust these lines later.</p>
+<h3>Making maps</h3>
 <p>We have prepared a QGIS project file. The file contains prepared 
-  styles and map templates making it dtraight forward to produce a 
-  sensitivity atlas.</p>
-  <p>Since all our data is stored in a database file other desktop or 
-    server tools may be used.
-  </p>
+styles and map templates making it dtraight forward to produce a 
+sensitivity atlas.</p>
+<p>Since all MESA-data is stored in a database file other desktop or 
+server tools may be used. It will however require detailed knowledge 
+about the GIS-tool.</p>
 </body>
 </html>
