--- a/code/system_resources/userguide.html
+++ b/code/system_resources/userguide.html
@@ -72,8 +72,7 @@ assets you have and the granularity of your geocode objects. It could take anyth
 a couple of minutes to an hour.</p>
 <p></p>
 <h3>Work with lines</h3>
-<p>If you would like to work with line segments you will need to store appropriate lines 
-in the lines-folder. You will have three options in this user interface.
+<p>If you would like to work with line segments you will need to store appropriate lines in the lines-folder. You will have three options in this user interface.
 <ul>
   <li>Initiate - creates some random lines for you to work on</li>
   <li>Edit segments - here you can edit the width and length of the line segments per line. This means you can have individual lengts and withs.</li>
@@ -83,11 +82,7 @@ in the lines-folder. You will have three options in this user interface.
 <p>The system can also generate some random lines for you. You can then 
 adjust these lines later.</p>
 <h3>Making maps</h3>
-<p>We have prepared a QGIS project file. The file contains prepared 
-styles and map templates making it dtraight forward to produce a 
-sensitivity atlas.</p>
-<p>Since all MESA-data is stored in a database file other desktop or 
-server tools may be used. It will however require detailed knowledge 
-about the GIS-tool.</p>
+<p>We have prepared a QGIS project file. The file contains prepared styles and map templates making it dtraight forward to produce a sensitivity atlas.</p>
+<p>Since all MESA-data is stored in a database file other desktop or server tools may be used. It will however require detailed knowledge about the GIS-tool.</p>
 </body>
 </html>
