--- a/code/system_resources/userguide.html
+++ b/code/system_resources/userguide.html
@@ -27,7 +27,7 @@ th {
 </style>
 </head>
 <body>
-<p>Welcome to the MESA 4.0 tool. The tool is based on a method developed by UNEP-WCMC and the Norwegian Environment Agency. 
+<p>Welcome to the MESA 4.1-beta tool. The tool is based on a method developed by UNEP-WCMC and the Norwegian Environment Agency. 
 You are now in the quick guide for our tool. Our aim with this page is to give you some basic information about how to use the system.</p>
 <p>
 <div><img src="system_resources/system_overview.png" alt="System overview graphic" width=720 halign=center></div> 
@@ -121,7 +121,7 @@ adjust these lines later.</p>
   only do this once every 24th hour. If you do not have any internet access the statistics will 
   not be sent.</p>
   <h3>An open system for all</h3>
-<p>MESA 4.0 is open source code. It uses open source libraries and will not require any paid 
+<p>MESA is open source code. It uses open source libraries and will not require any paid 
   licenses for use.
 </p>
   <p>If you would like to look at the code or even contribute with comments, bug messages or 
