Documentation: Removed version reference

--- a/code/system_resources/userguide.html
+++ b/code/system_resources/userguide.html
@@ -27,7 +27,7 @@ th {
 </style>
 </head>
 <body>
-<p>Welcome to the MESA 4.1-beta tool. The tool is based on a method developed by UNEP-WCMC and the Norwegian Environment Agency. 
+<p>Welcome to the MESA tool. The tool is based on a method developed by UNEP-WCMC and the Norwegian Environment Agency. 
 You are now in the quick guide for our tool. Our aim with this page is to give you some basic information about how to use the system.</p>
 <p>
 <div><img src="system_resources/system_overview.png" alt="System overview graphic" width=720 halign=center></div> 
