--- a/code/system_resources/userguide.html
+++ b/code/system_resources/userguide.html
@@ -27,105 +27,22 @@ th {
 </style>
 </head>
 <body>
-<p>Welcome to the MESA tool. The tool is based on a method developed by UNEP-WCMC and the Norwegian Environment Agency. 
-You are now in the quick guide for our tool. Our aim with this page is to give you some basic information about how to use the system.</p>
+<p><b>Welcome to the MESA tool. The tool is based on a method developed by UNEP-WCMC and the Norwegian Environment Agency. 
+You are now in the quick guide for our tool. Our aim with this page is to give you some basic information about how to use the system.</b></p>
+
 <p>
-<div><img src="system_resources/system_overview.png" alt="System overview graphic" width=720 halign=center></div> 
+<b>Why this system?</b> We built MESA to streamline and enhance sensitivity analysis by applying the MESA method, which is typically complex and prone to errors 
+  when done manually in GIS tools. The software allows users to perform this analysis faster and with greater accuracy, reducing the 
+  likelihood of mistakes. It also aims to improve user experience by automating the process and making it more accessible​.</p>
 </p>
-<h3>User interface overview</h3>
-<p>The MESA user interface can be divided into two types; imports/processing and data entry/edit. When data is imported or processed 
-  you will find that the log window provides information about the progress. 
-</p>
-<p>
-<div><img src="system_resources/processing_logoutput.png" alt="Sample log output" width=600 halign=center></div> 
-</p>
-<p>Aprogress bare will give you a visual indication of the progress. It however may not always represent an accurate account of the progress.
-</p>
-<p>When you edit data, move to the next record or close the dialogue, your edits will be automatically saved.
-</p>
-<h3>Import data</h3>
-<p>To work with MESA you will have to provide input data. This is part of building up the database. Eventually your 
-  input data will be processed and you will be provided with a database for visualisation or further analysis.</p>
-<p>Valid data formats are shapefiles or a geopackage file with tables. The data must be placed in the correct folders:</p>
-<table>
-  <tr>
-    <th>Data</th>
-    <th>Folder</th>
-    <th>Comment</th>
-  </tr>
-  <tr>
-    <td>Asset</td>
-    <td>input/asset</td>
-    <td>Spatial format can be point, lines or polygons</td>
-  </tr>
-  <tr>
-    <td>Geocode</td>
-    <td>input/geocode</td>
-    <td>Calid format is polygons</td>
-  </tr>
-  <tr>
-    <td>Atlas</td>
-    <td>input/atlas</td>
-    <td>Valid format is polygons</td>
-  </tr>
-  <tr>
-    <td>Lines</td>
-    <td>input/lines</td>
-    <td>Lines are only valid data format</td>
-  </tr>
-</table>
-<p>If you import new data after having processed your data you will have to enter the setup data again.</p>
-<h3>Set up processing</h3>
-<p>Processing data for a sensitivity atlas involves registering asset values and 
-  suceptibilitis. This is done by pressing the <b>Set up</b>-button.
-</p>
-<p>
-  <div><img src="system_resources/processing_setup.png" alt="Processing set up" width=700 halign=center></div> 
-  </p>
-<h3>Process data data</h3>
-<p>This is where you initiate the processing. Processing time will depend on how many 
-assets you have and the granularity of your geocode objects. It could take anything 
-a couple of minutes to an hour.</p>
-<h3>Work with lines</h3>
-<p>If you would like to work with line segments you will need to store appropriate 
-  lines in the lines-folder. You will have three options in this user interface.
+<p><b>How to use this system?</b> Information about using this system is available on a GitHUB website.<p>
 <ul>
-  <li>Initiate - creates some random lines for you to work on</li>
-  <li>Edit segments - here you can edit the width and length of the line segments per 
-    line. This means you can have individual lengts and withs.</li>
-  <li>Process segments does the same for line segments as the processing does for the 
-    geocode objects. Map and analysis layers are created.</li>
-  <li>Lines (input/lines)</li>
+  <li><a href="https://github.com/ragnvald/mesa/wiki" style="color: white;">Using MESA wiki</a></li>
 </ul>
-<p>The system can also generate some random lines for you. You can then 
-adjust these lines later.</p>
-<h3>Making maps</h3>
-<p>We have prepared a QGIS project file. The file contains prepared styles and map templates 
-  making it straight forward to produce a sensitivity atlas.</p>
-<p>Since all MESA-data is stored in a database file other desktop or server tools may be 
-  used. It will however require deailed knowledge about the GIS-tool.</p>
-  
-<h3>Resetting the system</h3>
-<p>At any time, if you want to give your project a fresh start, you can do so by deleting 
-  the existing database. This is the procedure:</p>
-<ol>
-  <li>Stop this program by pressing the Exit-button</li>
-  <li>Delete the database file. Its name is mesa.gpkg. You will find it in the folder /output</li>
-</ol>
-<h3>Handling your data</h3>
-<p>National regulations might stop you from sending your data abroad for processing. In MESA 3.0 we 
-  facilitated for cloud based processing. In this version we are back on processing on the 
-  desktop this way you will always have your data with you.</p>
-  <p>The system will by default send usage statistics to an online server. On the Registration-page 
-  you may turn of this functionality. Statistics are sent when you start up the system. It will 
-  only do this once every 24th hour. If you do not have any internet access the statistics will 
-  not be sent.</p>
-  <h3>An open system for all</h3>
-<p>MESA is open source code. It uses open source libraries and will not require any paid 
-  licenses for use.
+<b>Who built it?</b> This is the fourth generation of the tool. This version is the result of several workshops and consultations with 
+pertners in Ghana, Tanzania, Uganda, Mozambique and Kenya. Important contributions were by individuals ad UNEP-WCMC and the Norwegian 
+Environment Agency. Lead programmer for this version was <a href="https://www.linkedin.com/in/ragnvald/" style="color: white;">Ragnvald Larsen</a>,</p>
 </p>
-  <p>If you would like to look at the code or even contribute with comments, bug messages or 
-    even updates to the code you can do this on GitHub.
-  </p>
+
 </body>
 </html>
